# GestorDeTareas

./: CMakeLists.txt
includ/: Gestor.h  Tarea.h
src/: Gestor.cpp  GestorDeTareas.cpp  Tarea.cpp
